# swift-syntax-bazel-integration-example

./: .gitignore  BLANK_README.md  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE.bazel
Macros/: BUILD
Macros/Macros/: Stringify.swift  StringifyMacro.swift  URLMacro.swift
Macros/MacrosApp/: BUILD
Macros/MacrosApp/App.xcodeproj/: project.pbxproj
Macros/MacrosApp/App.xcodeproj/project.xcworkspace/xcuserdata/saul.abril.xcuserdatad/: UserInterfaceState.xcuserstate
Macros/MacrosApp/App.xcodeproj/rules_xcodeproj/: external.xcfilelist  generated.xcfilelist
Macros/MacrosApp/App.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh  import_indexstores  swiftc
Macros/MacrosApp/App.xcodeproj/xcshareddata/xcschemes/: App.xcscheme  Tests.xcscheme
Macros/MacrosApp/Sources/: ContentView.swift  MacrosApp.swift
Macros/MacrosPlugin/: MacrosPlugin.swift
Macros/MacrosPlugin/Stringify/: StringifyMacro.swift
Macros/MacrosPlugin/URL/: URLMacro.swift  URLMacroError.swift
Macros/MacrosPluginTests/Stringify/: StringifyMacroTests.swift
MacrosApp/: BUILD
MacrosApp/Sources/: ContentView.swift
Stringify/: BUILD
